--- a/pages/project3/project3-the-casestudy.html
+++ b/pages/project3/project3-the-casestudy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tech Trends Project Case Study | Genny Allison | AI Content & SEO Portfolio</title>
+    <title>Sports Tube Community Case Study | Genny Allison | AI Content & SEO Portfolio</title>
     <meta name="description" content="Explore the Sports Tube Community case study by Genny Allison—an AI Content Creator & SEO Specialist. See how AI tools and SEO strategies powered a fast, accessible, and high-ranking sports blog featured in her AI content and SEO portfolio." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
@@ -62,51 +62,6 @@
     <noscript><link rel="stylesheet" href="/styles/styles-article.css"></noscript>
 
     <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
-
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "BlogPosting",
-        "headline": "Tech Trends Project Case Study | Genny Allison | AI Content & SEO Portfolio",
-        "alternativeHeadline": "AI Creator & SEO Specialist Sports Blog Case Study",
-        "description": "Discover how Genny Allison, an AI Content Creator and SEO Specialist, built a responsive, high-ranking sports blog using advanced AI tools, keyword research, and Google PageSpeed techniques. This case study highlights her AI-powered portfolio work in content creation, SEO strategy, and web performance optimization.",
-        "image": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
-        "author": {
-          "@type": "Person",
-          "name": "Genny Allison",
-          "url": "https://gennyallison.netlify.app",
-          "sameAs": [
-            "https://www.linkedin.com/in/genny-allison/",
-            "https://github.com/Allison2002"
-          ]
-        },
-        "publisher": {
-          "@type": "Organization",
-          "name": "Allison Stock Inc.",
-          "logo": {
-            "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550266/allisonstock-logo_xgohg9.avif"
-          }
-        },
-        "mainEntityOfPage": {
-          "@type": "WebPage",
-          "@id": "https://sports-tube-community.netlify.app"
-        },
-        "datePublished": "2025-06-02",
-        "dateModified": "2025-06-02",
-        "keywords": [
-          "AI Creator & SEO Specialist Portfolio",
-          "AI content creation for websites",
-          "SEO content case study",
-          "AI-powered sports blog",
-          "responsive web design with AI",
-          "fast-loading website optimization",
-          "Core Web Vitals SEO",
-          "WCAG accessibility and SEO",
-          "Genny Allison AI projects"
-        ]
-      }
-    </script>
     <style>
       picture {
         width: 100%;
@@ -305,6 +260,76 @@
       }
 
     </style>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "headline": "Tech Trends Project Case Study | Genny Allison | AI Content & SEO Portfolio",
+        "alternativeHeadline": "AI Creator & SEO Specialist Sports Blog Case Study",
+        "description": "Discover how Genny Allison, an AI Content Creator and SEO Specialist, built a responsive, high-ranking sports blog using advanced AI tools, keyword research, and Google PageSpeed techniques. This case study highlights her AI-powered portfolio work in content creation, SEO strategy, and web performance optimization.",
+        "image": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
+        "author": {
+          "@type": "Person",
+          "name": "Genny Allison",
+          "url": "https://gennyallison.netlify.app",
+          "sameAs": [
+            "https://www.linkedin.com/in/genny-allison/",
+            "https://github.com/Allison2002"
+          ]
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Allison Stock Inc.",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550266/allisonstock-logo_xgohg9.avif"
+          }
+        },
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://sports-tube-community.netlify.app"
+        },
+        "datePublished": "2025-06-02",
+        "dateModified": "2025-06-02",
+        "keywords": [
+          "AI Creator & SEO Specialist Portfolio",
+          "AI content creation for websites",
+          "SEO content case study",
+          "AI-powered sports blog",
+          "responsive web design with AI",
+          "fast-loading website optimization",
+          "Core Web Vitals SEO",
+          "WCAG accessibility and SEO",
+          "Genny Allison AI projects"
+        ]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/collections"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Sports Tube Video Project",
+            "item": "https://gennyallison.netlify.app/pages/project3/project3-the-casestudy"
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <header>
