--- a/pages/project3/project3-the-design.html
+++ b/pages/project3/project3-the-design.html
@@ -3,9 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tech Trends Project | The Design | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
+    <title>Sports Tube Community Project | The Design | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
 
-    <meta name="description" content="Explore the design behind the Tech Trends Project by Genny Allison. This page highlights AI-powered layout, SEO-optimized visuals, responsive design techniques, and WCAG accessibility." />
+    <meta name="description" content="Explore the design of the Sports Tube Community Project—an AI content creation and SEO portfolio project by Genny Allison. Built for speed, accessibility, and performance using responsive web design and AI-powered content." />
+
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Sports Tube Community Project | The Design | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison" />
+    <meta property="og:description" content="Explore the Sports Tube Community design process, part of Genny Allison's AI content creation and SEO portfolio. Fast, responsive, and optimized for Core Web Vitals." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project3/project3-the-design.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif" />
+    <meta property="og:image:alt" content="Hero image of Sports Tube Community—fast, responsive sports blog project" />
+    <meta property="og:site_name" content="Genny Allison Portfolio" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sports Tube Community Project | The Design | Genny Allison Portfolio" />
+    <meta name="twitter:description" content="Design breakdown of the Sports Tube Community Project, optimized with AI content and SEO. Created by Genny Allison." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif" />
+    <meta name="twitter:image:alt" content="Hero image for Sports Tube Community AI content SEO design project" />
+    <meta name="twitter:creator" content="@allis78978" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
@@ -64,8 +81,6 @@
     <noscript><link rel="stylesheet" href="/styles/styles-article.css"></noscript>
 
     <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
-
-
     <style>
       picture {
         width: 100%;
@@ -260,6 +275,70 @@
       }
 
     </style>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "WebPage",
+            "@id": "https://gennyallison.netlify.app/pages/project3/project3-the-design.html",
+            "name": "Sports Tube Community Project | The Design",
+            "url": "https://gennyallison.netlify.app/pages/project3/project3-the-design.html",
+            "description": "Explore the design process of the Sports Tube Community Project, part of Genny Allison's AI content and SEO specialist portfolio. This sports blog project features responsive design, AI-generated content, and PageSpeed Insights optimization.",
+            "isPartOf": {
+              "@type": "WebSite",
+              "@id": "https://gennyallison.netlify.app/"
+            },
+            "inLanguage": "en-US",
+            "publisher": {
+              "@type": "Organization",
+              "name": "Allison Stock Inc.",
+              "url": "https://gennyallison.netlify.app/",
+              "logo": {
+                "@type": "ImageObject",
+                "url": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_336,h_138,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png",
+                "width": 336,
+                "height": 138
+              }
+            },
+            "author": {
+              "@type": "Person",
+              "name": "Genny Allison",
+              "url": "https://www.linkedin.com/in/genny-allison/",
+              "jobTitle": "AI Content Creator & SEO Specialist"
+            },
+            "mainEntityOfPage": "https://gennyallison.netlify.app/pages/project3/project3-the-design.html"
+          },
+        ]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/collections"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Sports Tube Video Project",
+            "item": "https://gennyallison.netlify.app/pages/project3/project3-the-design"
+          }
+        ]
+      }
+    </script>
+
   </head>
   <body>
     <header>
