--- a/pages/project3/project3-the-grade.html
+++ b/pages/project3/project3-the-grade.html
@@ -3,9 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tech Trends Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
+    <title>Sports Tube Community Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
 
-    <meta name="description" content="Genny Allison's AI Content Creator & SEO Specialist portfolio project showcases how she achieved a 100/100 PageSpeed Insights score through Core Web Vitals optimization, performance-driven design, and AI-powered image and content enhancements.">
+    <meta name="description" content="Discover how the Sports Tube Community project achieved a perfect 100/100 Google PageSpeed Insights score through AI content, SEO optimization, and Core Web Vitals performance." />
+
+        <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Sports Tube Community Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison" />
+    <meta property="og:description" content="Discover how the Sports Tube Community project achieved a perfect 100/100 Google PageSpeed Insights score through AI content, SEO optimization, and Core Web Vitals performance." />
+    <meta property="og:url" content="https://sports-tube-community.netlify.app/pages/project3/project3-the-grade.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif" />
+    <meta property="og:image:alt" content="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sports Tube Community Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison" />
+    <meta name="twitter:description" content="Explore how Genny Allison optimized the Sports Tube Community project for a perfect 100/100 PageSpeed Insights score using AI content, SEO, and Core Web Vitals." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif" />
+    <meta name="twitter:image:alt" content="Fast-loading, AI-powered blog optimization preview of Sports Tube Community" />
+    <meta name="twitter:site" content="@allis78978" />
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
@@ -259,6 +276,66 @@
       }
 
     </style>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "TechArticle",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://sports-tube-community.netlify.app/pages/project3/project3-the-grade.html"
+        },
+        "headline": "Sports Tube Community Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison",
+        "description": "Discover how the Sports Tube Community project achieved a perfect 100/100 Google PageSpeed Insights score through AI content, SEO optimization, and Core Web Vitals performance.",
+        "image": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
+        "author": {
+          "@type": "Person",
+          "name": "Genny Allison",
+          "url": "https://gennyallison.netlify.app",
+          "sameAs": [
+            "https://www.linkedin.com/in/genny-allison/",
+            "https://github.com/Allison2002",
+            "https://x.com/allis78978",
+            "https://www.instagram.com/allison_stock_inc/"
+          ]
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Allison Stock Inc.",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_300/v1746550266/allisonstock-logo_xgohg9.avif"
+          }
+        },
+        "datePublished": "2025-06-06",
+        "dateModified": "2025-06-06"
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/collections"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Sports Tube Video Project",
+            "item": "https://gennyallison.netlify.app/pages/project3/project3-the-grade"
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <header>
@@ -378,7 +455,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_522/v1743469949/seo-grade_mmztmf.avif"
-              alt="AI-powered SEO grade result from Tech Trends Blog showing Core Web Vitals optimization"
+              alt="AI-powered SEO grade result from Sports Tube Community showing Core Web Vitals optimization"
               width="312"
               height="261"
               style="object-fit: cover;"
@@ -440,7 +517,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_408/v1748893702/project3-desktop-grades_oa39bz.avif"
-              alt="SEO Desktop performance result after AI content and PageSpeed optimization on Tech Trends Blog"
+              alt="SEO Desktop performance result after AI content and PageSpeed optimization on Sports Tube Community"
               width="312"
               height="204"
               style="object-fit: contain;"
@@ -469,7 +546,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_640,h_610/v1746490642/sports-tube-community-desktop-grade-started_ww1p6g.avif"
-              alt="Tech Trends Blog SEO grade result showing performance before optimization"
+              alt="Sports Tube Community SEO grade result showing performance before optimization"
               width="320"
               height="305"
               style="object-fit: cover;"
@@ -499,7 +576,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_640,h_630/v1746490642/sports-tube-community-desktop-grade-ended_mq3fuv.avif"
-              alt="Tech Trends Blog SEO grade result showing performance after optimization"
+              alt="Sports Tube Community SEO grade result showing performance after optimization"
               width="320"
               height="315"
               style="object-fit: cover;"
@@ -529,7 +606,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_640,h_408/v1748893701/project3-mobile-grades_c9saff.avif"
-              alt="Tech Trends Blog SEO Mobile grade result showing performance after optimization"
+              alt="Sports Tube Community SEO Mobile grade result showing performance after optimization"
               width="320"
               height="204"
               style="object-fit: contain;"
@@ -558,7 +635,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_658/v1746490641/sports-tube-community-mobile-grade-started_nvtau8.avif"
-              alt="Tech Trends Blog SEO Mobile grade result showing performance before optimization"
+              alt="Sports Tube Community SEO Mobile grade result showing performance before optimization"
               width="320"
               height="329"
               style="object-fit: cover;"
@@ -587,7 +664,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_636/v1746490644/sports-tube-communit-grade-mobile-ended_xr1sv4.avif"
-              alt="Tech Trends Blog SEO grade result showing performance before optimization"
+              alt="Sports Tube Community SEO grade result showing performance before optimization"
               width="312"
               height="318"
               style="object-fit: cover;"
@@ -617,7 +694,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_892/v1732986926/hubspot-grade_hnuolf.avif"
-              alt="HubSpot grade showing SEO performance score for Tech Trends Blog"
+              alt="HubSpot grade showing SEO performance score for Sports Tube Community"
               width="100%"
               height="auto"
               style="object-fit: cover;"
