--- a/pages/project4/project4-intro.html
+++ b/pages/project4/project4-intro.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Texas Remodelers Wordpress Project | AI Content & SEO Portfolio Project by Genny Allison</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Explore the Texas Remodelers WordPress project by AI Content Creator & SEO Specialist Genny Allison—featuring AI content, responsive design, and PageSpeed optimization in progress.">
+
+        <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Texas Remodelers WordPress Project | AI Content & SEO Portfolio by Genny Allison" />
+    <meta property="og:description" content="Explore the Texas Remodelers WordPress project showcasing AI-generated content, responsive WordPress design, and SEO optimization in progress." />
+    <meta property="og:url" content="https://texas-remodelers-sample.netlify.app/pages/project4/project4-intro.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif" />
+    <meta property="og:image:alt" content="Texas Remodelers WordPress Project with AI-powered content, responsive layout, and SEO in progress" />
+    <meta property="og:site_name" content="Genny Allison Portfolio - Allison Stock Inc." />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Texas Remodelers WordPress Project | Genny Allison Portfolio" />
+    <meta name="twitter:description" content="Professional WordPress site using AI-generated content and SEO strategy. View this in-progress showcase of responsive design and optimization." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif" />
+    <meta name="twitter:image:alt" content="Preview of Texas Remodelers WordPress Project with responsive design and SEO in progress" />
+    <meta name="twitter:site" content="@allis78978" />
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
@@ -261,46 +279,46 @@
       {
         "@context": "https://schema.org",
         "@type": "CollectionPage",
-        "name": "Sports Tube Community Blog Project | AI Content & SEO Portfolio by Genny Allison",
-        "description": "Explore the Sports Tube Community Blog Project by AI Content Creator & SEO Specialist Genny Allison. This page introduces the AI-powered, SEO-optimized blog platform featuring user-submitted sports articles. Navigate to the full case study, PageSpeed 100/100 grade, wireframe, design concept, and final site launch.",
-        "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html",
+        "name": "Texas Remodelers WordPress Project | AI Content & SEO Portfolio by Genny Allison",
+        "description": "Explore the Texas Remodelers WordPress project created by AI Content Creator & SEO Specialist Genny Allison. Featuring AI-generated content, SEO optimization, responsive design, and a transparent look into Core Web Vitals performance improvement.",
+        "url": "https://texas-remodelers-sample.netlify.app/pages/project4/project4-intro.html",
         "image": {
           "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif",
           "width": 1458,
           "height": 948,
-          "caption": "Hero image of the Sports Tube Community Blog Project showcasing AI-generated content and responsive design"
+          "caption": "Texas Remodelers WordPress Project — AI-powered content, responsive layout, and SEO optimization in progress"
         },
         "hasPart": [
           {
             "@type": "WebPage",
-            "name": "The Grade | PageSpeed Insights 100/100",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-grade.html"
+            "name": "The Grade | PageSpeed Insights Optimization",
+            "url": "https://texas-remodelers-sample.netlify.app/pages/project4/project4-the-grade.html"
           },
           {
             "@type": "WebPage",
-            "name": "The Case Study",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-casestudy.html"
+            "name": "The Case Study | SEO & AI Content Strategy",
+            "url": "https://texas-remodelers-sample.netlify.app/pages/project4/project4-the-casestudy.html"
           },
           {
             "@type": "WebPage",
-            "name": "The Design Strategy",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-design.html"
+            "name": "The Design | UI/UX and Visual Strategy",
+            "url": "https://texas-remodelers-sample.netlify.app/pages/project4/project4-the-design.html"
           },
           {
             "@type": "WebPage",
-            "name": "The Wireframe",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-wireframe.html"
+            "name": "The Finale | Live WordPress Deployment",
+            "url": "https://texas-remodelers-sample.netlify.app/"
           },
           {
             "@type": "WebPage",
-            "name": "Final Website",
-            "url": "https://sports-tube-community.netlify.app/"
+            "name": "GitHub Source Code",
+            "url": "https://github.com/Allison2002/texas-remodelers-sample.git"
           },
           {
-            "@type": "ContactPage",
-            "name": "Contact Genny Allison",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html#author-bio"
+            "@type": "WebPage",
+            "name": "Sister Blog | Texas Remodelers Blog",
+            "url": "https://texas-remodelers-sample.netlify.app/texas-remodelers-blog/"
           }
         ],
         "creator": {
@@ -326,17 +344,44 @@
             "height": 210
           }
         },
-        "datePublished": "2025-06-02",
-        "dateModified": "2025-06-02",
+        "datePublished": "2025-06-06",
+        "dateModified": "2025-06-06",
         "keywords": [
+          "Texas WordPress project",
           "AI content creator portfolio",
           "SEO content specialist",
-          "PageSpeed 100 optimization",
-          "AI website development case study",
-          "responsive web design",
-          "Core Web Vitals optimization",
-          "SEO strategy portfolio",
-          "user-generated sports blog"
+          "WordPress web development",
+          "responsive design",
+          "Core Web Vitals",
+          "PageSpeed Insights optimization",
+          "AI-powered website design",
+          "work in progress portfolio"
+        ]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/collections"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Sports Tube Video Project",
+            "item": "https://gennyallison.netlify.app/pages/project4/project4-intro"
+          }
         ]
       }
     </script>
