--- a/pages/project4/project4-the-casestudy.html
+++ b/pages/project4/project4-the-casestudy.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tech Trends Project Case Study | Genny Allison | AI Content & SEO Portfolio</title>
-    <meta name="description" content="Explore the Sports Tube Community case study by Genny Allison—an AI Content Creator & SEO Specialist. See how AI tools and SEO strategies powered a fast, accessible, and high-ranking sports blog featured in her AI content and SEO portfolio." />
+    <meta name="description" content="Explore how Genny Allison, a WordPress Developer and SEO Specialist, rebuilt and optimized the Texas Remodelers site using AI content, Core Web Vitals techniques, and strategic SEO practices in this case study." />
+
+        <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Texas Remodelers WordPress Case Study | Genny Allison | AI Content & SEO Specialist" />
+    <meta property="og:description" content="Discover how Genny Allison rebuilt and optimized the Texas Remodelers site using AI tools, WordPress, and SEO strategies to recover and redeploy a fast, accessible website." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project3/project3-the-casestudy.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif" />
+    <meta property="og:image:alt" content="Intro page for Texas Remodelers WordPress Project showcasing AI-generated content and responsive layout" />
+    <meta property="og:site_name" content="Genny Allison Portfolio" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Texas Remodelers WordPress Case Study | Genny Allison | AI Content & SEO Specialist" />
+    <meta name="twitter:description" content="Explore how Genny Allison used AI and SEO tools to restore and optimize the Texas Remodelers website—an evolving WordPress portfolio case study." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif" />
+    <meta name="twitter:image:alt" content="Preview of the Texas Remodelers website rebuild showing AI-driven SEO work in progress" />
+    <meta name="twitter:creator" content="@allis78978" />
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 
@@ -258,54 +277,14 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "CollectionPage",
-        "name": "Sports Tube Community Blog Project | AI Content & SEO Portfolio by Genny Allison",
-        "description": "Explore the Sports Tube Community Blog Project by AI Content Creator & SEO Specialist Genny Allison. This page introduces the AI-powered, SEO-optimized blog platform featuring user-submitted sports articles. Navigate to the full case study, PageSpeed 100/100 grade, wireframe, design concept, and final site launch.",
-        "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html",
-        "image": {
-          "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
-          "width": 1458,
-          "height": 948,
-          "caption": "Hero image of the Sports Tube Community Blog Project showcasing AI-generated content and responsive design"
-        },
-        "hasPart": [
-          {
-            "@type": "WebPage",
-            "name": "The Grade | PageSpeed Insights 100/100",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-grade.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "The Case Study",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-casestudy.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "The Design Strategy",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-design.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "The Wireframe",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-wireframe.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "Final Website",
-            "url": "https://sports-tube-community.netlify.app/"
-          },
-          {
-            "@type": "ContactPage",
-            "name": "Contact Genny Allison",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html#author-bio"
-          }
-        ],
-        "creator": {
+        "@type": "CreativeWork",
+        "name": "Texas Remodelers Project Case Study",
+        "headline": "Tech Trends Project Case Study | Genny Allison | AI Content & SEO Portfolio",
+        "description": "Explore the Texas Remodelers case study by Genny Allison—an AI Content Creator & SEO Specialist. Learn how AI tools, SEO strategies, and WordPress recovery techniques powered a fast, accessible, and evolving remodeling site featured in her professional portfolio.",
+        "author": {
           "@type": "Person",
           "name": "Genny Allison",
-          "jobTitle": "AI Content Creator & SEO Specialist",
-          "url": "https://gennyallison.netlify.app",
+          "url": "https://gennyallison.netlify.app/",
           "sameAs": [
             "https://www.linkedin.com/in/genny-allison/",
             "https://github.com/Allison2002",
@@ -316,25 +295,62 @@
         "publisher": {
           "@type": "Organization",
           "name": "Allison Stock Inc.",
-          "url": "https://gennyallison.netlify.app",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550266/allisonstock-logo_xgohg9.avif",
-            "width": 484,
-            "height": 210
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
           }
         },
-        "datePublished": "2025-06-02",
-        "dateModified": "2025-06-02",
+        "url": "https://texas-remodelers-sample.netlify.app/",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://gennyallison.netlify.app/pages/project3/project3-the-casestudy.html"
+        },
+        "image": {
+          "@type": "ImageObject",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif",
+          "width": 1458,
+          "height": 948
+        },
+        "datePublished": "2025-06-06",
         "keywords": [
-          "AI content creator portfolio",
-          "SEO content specialist",
-          "PageSpeed 100 optimization",
-          "AI website development case study",
-          "responsive web design",
-          "Core Web Vitals optimization",
-          "SEO strategy portfolio",
-          "user-generated sports blog"
+          "WordPress Developer Portfolio",
+          "AI Content Creator",
+          "SEO Specialist",
+          "Website Optimization",
+          "Case Study",
+          "Texas Remodelers",
+          "Core Web Vitals",
+          "Static Site Recovery"
+        ],
+        "about": {
+          "@type": "Thing",
+          "name": "WordPress Recovery and Optimization Project"
+        }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/collections"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Sports Tube Video Project",
+            "item": "https://gennyallison.netlify.app/pages/project4/project4-the-casestudy"
+          }
         ]
       }
     </script>
