--- a/pages/project4/project4-the-design.html
+++ b/pages/project4/project4-the-design.html
@@ -3,9 +3,27 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tech Trends Project | The Design | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
+    <title>Texas Remodelers Project | The Design | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
 
-    <meta name="description" content="Explore the design behind the Tech Trends Project by Genny Allison. This page highlights AI-powered layout, SEO-optimized visuals, responsive design techniques, and WCAG accessibility." />
+    <meta name="description" content="Explore the design process behind Texas Remodelers, a WordPress project by Genny Allison. This SEO portfolio piece highlights AI-generated content, responsive layouts, and modern web design techniques tailored for commercial remodeling websites." />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Texas Remodelers Project | The Design | AI Content & SEO Portfolio | Genny Allison" />
+    <meta property="og:description" content="Discover how Genny Allison designed and optimized the Texas Remodelers WordPress site using AI-generated content, responsive design, and SEO strategies tailored for commercial remodeling." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project4/project4-the-design.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta property="og:image:alt" content="Preview of Texas Remodelers WordPress site featuring AI-powered SEO design for a remodeling business" />
+    <meta property="og:site_name" content="Genny Allison | AI Content & SEO Specialist Portfolio" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Texas Remodelers Project | The Design | AI Content & SEO Portfolio | Genny Allison" />
+    <meta name="twitter:description" content="Explore the Texas Remodelers design by Genny Allison—a WordPress project showcasing AI content, SEO techniques, and modern layout strategy." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta name="twitter:image:alt" content="AI-powered design for a WordPress remodeling project by Genny Allison" />
+    <meta name="twitter:creator" content="@allis78978" />
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
@@ -260,83 +278,64 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "CollectionPage",
-        "name": "Sports Tube Community Blog Project | AI Content & SEO Portfolio by Genny Allison",
-        "description": "Explore the Sports Tube Community Blog Project by AI Content Creator & SEO Specialist Genny Allison. This page introduces the AI-powered, SEO-optimized blog platform featuring user-submitted sports articles. Navigate to the full case study, PageSpeed 100/100 grade, wireframe, design concept, and final site launch.",
-        "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html",
-        "image": {
-          "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
-          "width": 1458,
-          "height": 948,
-          "caption": "Hero image of the Sports Tube Community Blog Project showcasing AI-generated content and responsive design"
-        },
-        "hasPart": [
-          {
-            "@type": "WebPage",
-            "name": "The Grade | PageSpeed Insights 100/100",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-grade.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "The Case Study",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-casestudy.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "The Design Strategy",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-design.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "The Wireframe",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-wireframe.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "Final Website",
-            "url": "https://sports-tube-community.netlify.app/"
-          },
-          {
-            "@type": "ContactPage",
-            "name": "Contact Genny Allison",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html#author-bio"
-          }
-        ],
-        "creator": {
+        "@type": "WebPage",
+        "name": "Texas Remodelers Project | The Design | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison",
+        "url": "https://gennyallison.netlify.app/pages/project4/project4-the-design.html",
+        "description": "Explore the design process behind Texas Remodelers, a WordPress portfolio project by Genny Allison. Featuring AI-generated content, responsive design, and SEO-optimized layouts tailored for a commercial remodeling website.",
+        "author": {
           "@type": "Person",
           "name": "Genny Allison",
-          "jobTitle": "AI Content Creator & SEO Specialist",
           "url": "https://gennyallison.netlify.app",
           "sameAs": [
             "https://www.linkedin.com/in/genny-allison/",
             "https://github.com/Allison2002",
-            "https://x.com/allis78978",
-            "https://www.instagram.com/allison_stock_inc/"
+            "https://www.instagram.com/allison_stock_inc/",
+            "https://x.com/allis78978"
           ]
         },
         "publisher": {
           "@type": "Organization",
           "name": "Allison Stock Inc.",
-          "url": "https://gennyallison.netlify.app",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550266/allisonstock-logo_xgohg9.avif",
-            "width": 484,
-            "height": 210
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_336,h_138,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png",
+            "width": 336,
+            "height": 138
           }
         },
-        "datePublished": "2025-06-02",
-        "dateModified": "2025-06-02",
-        "keywords": [
-          "AI content creator portfolio",
-          "SEO content specialist",
-          "PageSpeed 100 optimization",
-          "AI website development case study",
-          "responsive web design",
-          "Core Web Vitals optimization",
-          "SEO strategy portfolio",
-          "user-generated sports blog"
+        "mainEntity": {
+          "@type": "CreativeWork",
+          "headline": "Texas Remodelers Project | The Design",
+          "about": "WordPress development, AI-generated content, SEO optimization, responsive layout",
+          "image": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,c_fill,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif",
+          "datePublished": "2025-06-06",
+          "inLanguage": "en"
+        }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/collections"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Sports Tube Video Project",
+            "item": "https://gennyallison.netlify.app/pages/project4/project4-the-design"
+          }
         ]
       }
     </script>
