--- a/pages/project4/project4-the-grade.html
+++ b/pages/project4/project4-the-grade.html
@@ -3,9 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tech Trends Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
+    <title>Texas Remodelers Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
 
     <meta name="description" content="Genny Allison's AI Content Creator & SEO Specialist portfolio project showcases how she achieved a 100/100 PageSpeed Insights score through Core Web Vitals optimization, performance-driven design, and AI-powered image and content enhancements.">
+
+        <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Texas Remodelers Project | The Grade | AI Content & SEO Portfolio | Genny Allison">
+    <meta property="og:description" content="Explore how Genny Allison achieved a perfect 100/100 PageSpeed Insights score for the Texas Remodelers project using AI content, Core Web Vitals optimization, and responsive WordPress design.">
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif">
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project3/project3-the-grade.html">
+    <meta property="og:site_name" content="Genny Allison | AI Content & SEO Specialist">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Texas Remodelers Project | The Grade | AI SEO Portfolio">
+    <meta name="twitter:description" content="100/100 Google PageSpeed score, AI content, and WordPress optimization by Genny Allison. See the performance results and strategy breakdown.">
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif">
+    <meta name="twitter:creator" content="@allis78978">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
@@ -258,86 +273,72 @@
       }
 
     </style>
-    <script type="application/ld+json">
+
+        <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "CollectionPage",
-        "name": "Sports Tube Community Blog Project | AI Content & SEO Portfolio by Genny Allison",
-        "description": "Explore the Sports Tube Community Blog Project by AI Content Creator & SEO Specialist Genny Allison. This page introduces the AI-powered, SEO-optimized blog platform featuring user-submitted sports articles. Navigate to the full case study, PageSpeed 100/100 grade, wireframe, design concept, and final site launch.",
-        "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html",
+        "@type": "WebPage",
+        "name": "Texas Remodelers Project | The Grade",
+        "url": "https://gennyallison.netlify.app/pages/project3/project3-the-grade.html",
+        "description": "Genny Allison's AI Content Creator & SEO Specialist portfolio project showcases how she achieved a 100/100 PageSpeed Insights score through Core Web Vitals optimization, performance-driven design, and AI-powered image and content enhancements.",
+        "mainEntity": {
+          "@type": "CreativeWorkSeries",
+          "name": "Texas Remodelers Project",
+          "url": "https://gennyallison.netlify.app/pages/project3/project3-intro.html",
+          "description": "A WordPress-based site rebuilt after technical disruption, focused on SEO optimization and AI-powered content for a commercial remodeling concept.",
+          "author": {
+            "@type": "Person",
+            "name": "Genny Allison",
+            "url": "https://www.linkedin.com/in/genny-allison/"
+          },
+          "publisher": {
+            "@type": "Organization",
+            "name": "Allison Stock Inc.",
+            "logo": {
+              "@type": "ImageObject",
+              "url": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_336,h_138/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+            }
+          }
+        },
         "image": {
           "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif",
           "width": 1458,
           "height": 948,
-          "caption": "Hero image of the Sports Tube Community Blog Project showcasing AI-generated content and responsive design"
+          "caption": "Intro page for Texas Remodelers WordPress Project showcasing AI-generated content, showing SEO optimization in progress, and responsive layout"
         },
-        "hasPart": [
-          {
-            "@type": "WebPage",
-            "name": "The Grade | PageSpeed Insights 100/100",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-grade.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "The Case Study",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-casestudy.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "The Design Strategy",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-design.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "The Wireframe",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-wireframe.html"
-          },
-          {
-            "@type": "WebPage",
-            "name": "Final Website",
-            "url": "https://sports-tube-community.netlify.app/"
-          },
-          {
-            "@type": "ContactPage",
-            "name": "Contact Genny Allison",
-            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html#author-bio"
-          }
-        ],
         "creator": {
           "@type": "Person",
           "name": "Genny Allison",
-          "jobTitle": "AI Content Creator & SEO Specialist",
-          "url": "https://gennyallison.netlify.app",
-          "sameAs": [
-            "https://www.linkedin.com/in/genny-allison/",
-            "https://github.com/Allison2002",
-            "https://x.com/allis78978",
-            "https://www.instagram.com/allison_stock_inc/"
-          ]
+          "url": "https://gennyallison.netlify.app"
         },
-        "publisher": {
-          "@type": "Organization",
-          "name": "Allison Stock Inc.",
-          "url": "https://gennyallison.netlify.app",
-          "logo": {
-            "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550266/allisonstock-logo_xgohg9.avif",
-            "width": 484,
-            "height": 210
+        "datePublished": "2025-06-06",
+        "inLanguage": "en-US"
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/collections"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Sports Tube Video Project",
+            "item": "https://gennyallison.netlify.app/pages/project4/project4-the-grade"
           }
-        },
-        "datePublished": "2025-06-02",
-        "dateModified": "2025-06-02",
-        "keywords": [
-          "AI content creator portfolio",
-          "SEO content specialist",
-          "PageSpeed 100 optimization",
-          "AI website development case study",
-          "responsive web design",
-          "Core Web Vitals optimization",
-          "SEO strategy portfolio",
-          "user-generated sports blog"
         ]
       }
     </script>
@@ -460,7 +461,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_522/v1743469949/seo-grade_mmztmf.avif"
-              alt="AI-powered SEO grade result from Tech Trends Blog showing Core Web Vitals optimization"
+              alt="AI-powered SEO grade result from Texas Remodelers showing Core Web Vitals optimization"
               width="312"
               height="261"
               style="object-fit: cover;"
