--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -138,6 +138,32 @@
         }
       }
     </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/collections"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Sports Tube Video Project",
+            "item": "https://gennyallison.netlify.app/pages/project1/project1-the-grade"
+          }
+        ]
+      }
+    </script>
     <style>
       picture {
         width: 100%;
